--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>UTECH</title>
-  <meta name="title" content="Unigine - Epic Games Made For True Gamers!">
-  <meta name="description" content="This is an esports and gaming html template made by codewithsadee">
+  
 
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
@@ -281,7 +280,7 @@
 
                   <p class="card-text">
                   I'm Val, a passionate and aspiring web developer and designer. 
-                While I am a student, my love for creating visually appealing and functional websites has driven me to explore the exciting world of web development...
+                While I am a student, my love for creating visually appealing and functional websites has driven me to...
                   </p>
 
                   <a href="https://valll01.github.io/Portfolio/" class="link has-before">VIEW PORTFOLIO HERE</a>
@@ -323,7 +322,7 @@
                   </h3>
 
                   <p class="card-text">
-                  I'm second year student at Nueva Ecija University of Science and Technology and Im taking the course of I.T, I thought that college is gonna be easy than I though...
+                  I'm second year student at Nueva Ecija University of Science and Technology and Im taking the course of I.T, I thought that college is gonna be easy than I though but I didn't...
                   </p>
 
                   <a href="https://vincelei.github.io/Portpolio/" class="link has-before">VIEW PORFOLIO HERE</a>
@@ -364,7 +363,7 @@
                   </h3>
 
                   <p class="card-text">
-                    Azriel Ken Bartolome, a 20-year-old interior designer, embodies creativity, precision, and an unwavering passion for transforming spaces into captivating havens..m
+                    Azriel Ken Bartolome, a 20-year-old interior designer, embodies creativity, precision, and an unwavering passion for transforming spaces into captivating havens...
                   </p>
 
                   <a href="https://azrielken.github.io/protfolio/" class="link has-before">VIEW PORTFOLIO HERE</a>
@@ -403,7 +402,7 @@
                   </h3>
 
                   <p class="card-text">
-                    I am a 19-year-old web developer with a passion for crafting engaging and functional digital experiences. I specialize in front-end development, ensuring user interfaces are not only visually appealing but also intuitive...
+                    I am a 19-year-old web developer with a passion for crafting engaging and functional digital experiences. I specialize in front-end development, ensuring user interfaces are not only visually...
                   </p>
 
                   <a href="https://janreyy.github.io/Portfolio/" class="link has-before">VIEW PORTFOLIO HERE</a>
@@ -443,7 +442,7 @@
                   </h3>
 
                   <p class="card-text">
-                    I am 21 years old and I study Nueva Ecija University Of Science And Technology Working within the Web is most certainly a lifestyle choice, and all this time spent immersed in our working environment can affect our passion and motivation for it.
+                    I am 21 years old and I study Nueva Ecija University Of Science And Technology Working within the Web is most certainly a lifestyle choice, and all this time spent immersed in our working...
                   </p>
 
                   <a href="https://johnrovic30.github.io/Portfolio/index.html" class="link has-before">VIEW PORTFOLIO HERE</a>
@@ -483,7 +482,7 @@
                   </h3>
 
                   <p class="card-text">
-I am a Student at Nueva Ecija University of Science and Technology. My hobby is playing online game, I spend my free time playing online games with my friends and it's the way I connect with them. Playing online games can provides social benefits to improved multi-tasking skill & enchances memory, And also a great source to develop early learning skills.
+                    My hobby is playing online game, gaming is my way to relax. I spend my free time playing online games with my friends and it's the way I connect with them. Playing online games can provides s0cial...
                   </p>
 
                   <a href="https://gezrael.github.io/Portfolio/" class="link has-before">VIEW PORTFOLIO HERE</a>
@@ -587,7 +586,7 @@ I am a Student at Nueva Ecija University of Science and Technology. My hobby is 
       <div class="container">
 
         <p class="copyright">
-          &copy; UTECH 2023 All Rights Reserved.
+          &copy; UTECH 2023 All Rights.
         </p>
 
       </div>
