--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     A classic card game, unfolds on the table like a silent symphony of concentration and discovery. Spread before you are an array of facedown cards, each concealing a twin waiting to be reunited.
                   </p>
 
-                  <a href="#" class="link has-before">Play Here!</a>
+                  <a href="https://vincelei.github.io/MemoryGame/" class="link has-before">Play Here!</a>
 
                 </div>
 
